Accessibility fixes + anchor links alignment (#383)
* Update video-carousel.css

* accessibility fix

* Update decorate.js

* Update header.js

* Update anchor-links.css

* Update scripts.js

* Update scripts.js

* Update scripts.js

* Update scripts.js

* Update anchor-links.css

--- a/blocks/anchor-links/anchor-links.css
+++ b/blocks/anchor-links/anchor-links.css
@@ -3,6 +3,7 @@
 .anchor-links {
     div > p {
         display: flex;
+        justify-content: center;
         gap: 32px;
     }
     
@@ -33,12 +34,5 @@
         &:last-of-type::after {
             display: none;
         }
-    }
-}
-
-
-@media screen and (width >= 960px) {
-    .anchor-links div > p {
-        justify-content: center; 
     }
 }
